--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
         </div>
     </nav>
 
+    <aside class="sidebar">
+        <a href="#main" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">Home</a>
+            <a href="#about" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">About</a>
+            <a href="#skills" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">Skills</a>
+            <a href="#services" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">Positions</a>
+            <a href="#work" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Projects</a>
+            <a href="#contact" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">Contact</a>
+    </aside>
+
     <section class="main" id="main">
         <div class="content">
             <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">Hello, I'm <br><span>John Doe</span>
