--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     </div>
                     <div class="info">
                         <h3>Email Address</h3>
-                        <span>kabhishekmenon@gmail.com</span>
+                        <span>john@gmail.com</span>
                     </div>
                 </div>
                 <div class="card">
