updated the skills section

--- a/index.html
+++ b/index.html
@@ -98,55 +98,22 @@
                     such as Node.js and Python. Over the past few years, I’ve gained hands-on experience collaborating
                     in cross-functional teams, debugging complex code, and optimizing web performance. I’m always eager
                     to learn new technologies and take on challenges that push my creative and technical boundaries.</p>
-                <a href="#" class="btn" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="400">See
-                    more</a>
+               
             </div>
             <div class="column-right">
-                <div class="bar">
-                    <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="100">
-                        <span>HTML</span>
-                        <span>95%</span>
-                    </div>
-                    <div class="line html" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="140">
-                        <div class="line-content"></div>
-                    </div>
+                <div class="skill" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="100">
+                    <span>HTML</span>
                 </div>
-                <div class="bar" >
-                    <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="200">
-                        <span>CSS</span>
-                        <span>90%</span>
-                    </div>
-                    <div class="line css" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="240">
-                        <div class="line-content"></div>
-                    </div>
+                <div class="skill" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="100">
+                    <span>CSS</span>
                 </div>
-                <div class="bar">
-                    <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="300">
-                        <span>Javascript</span>
-                        <span>80%</span>
-                    </div>
-                    <div class="line javascript" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="340">
-                        <div class="line-content"></div>
-                    </div>
+                <div class="skill" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="100">
+                    <span>JavaScript</span>
                 </div>
-                <div class="bar">
-                    <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="400">
-                        <span>Python</span>
-                        <span>85%</span>
-                    </div>
-                    <div class="line python" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="440">
-                        <div class="line-content"></div>
-                    </div>
+                <div class="skill" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="100">
+                    <span>Python</span>
                 </div>
-                <div class="bar">
-                    <div class="info" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="500">
-                        <span>PHP</span>
-                        <span>65%</span>
-                    </div>
-                    <div class="line php" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="540">
-                        <div class="line-content"></div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
